--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>John Doe Photography</title>
-  <base href="/photography-site/dist/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>@font-face{font-family:Open-sans-light;src:url(OpenSans-Light.3832d4b76900ba34.ttf)}*{box-sizing:border-box;margin:0;padding:0;font-family:Open-sans-light}html{scroll-behavior:smooth}</style><link rel="stylesheet" href="styles.ff6693f2c4e5cb4b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.ff6693f2c4e5cb4b.css"></noscript></head>
